<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="blaizersGameViewModel"
            type="com.miuelO6.netsb.com.viewmodel.BlaizersGameViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/blaizers_game_back"
        tools:context=".view.BlaizersGameFragment">

        <LinearLayout
            android:layout_width="130dp"
            android:layout_height="30dp"
            android:background="@drawable/blaizers_text_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.002">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/blaizers_chip"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/blaizers_money"
                style="@style/blaizers_text_style"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:text="@{String.valueOf(blaizersGameViewModel.blaizersMoneyText)}" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/blaizers_bet_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="@{blaizersGameViewModel.blazersBetBoardVisibility}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                style="@style/blaizers_text_style"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/blaizers_min_bet"
                android:layout_marginBottom="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/blaizers_bet_minus"
                    style="@style/blaizers_button_style"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:onClick="@{() -> blaizersGameViewModel.reduceBlaizersBet()}"
                    android:text="@string/blaizers_minus" />

                <TextView
                    android:id="@+id/blaizers_bet_sum"
                    style="@style/blaizers_text_style"
                    android:layout_width="90dp"
                    android:layout_height="30dp"
                    android:gravity="center"
                    android:text="@{String.valueOf(blaizersGameViewModel.blaizersbet)}"
                    android:textSize="14sp"
                    android:maxLength="6" />

                <Button
                    android:id="@+id/blaizers_bet_plus"
                    style="@style/blaizers_button_style"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:onClick="@{() -> blaizersGameViewModel.addBlaizersBet()}"
                    android:text="@string/blaizers_plus" />


            </LinearLayout>

            <Button
                android:id="@+id/blaizers_bet"
                style="@style/blaizers_button_style"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/blazers_bet"
                android:onClick="@{() -> blaizersGameViewModel.makeBlazersBet()}"/>

        </LinearLayout>

        <TextView
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:background="@drawable/blaizers_chip"
            android:fontFamily="@font/ultra"
            android:gravity="center"
            android:maxLength="6"
            android:text="@{String.valueOf(blaizersGameViewModel.blaizersbet)}"
            android:textColor="@color/black"
            android:textSize="9sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.609"
            tools:ignore="SmallSp" />


        <ImageView
            android:id="@+id/blaizers_user_card_1"
            android:layout_width="38dp"
            android:layout_height="55dp"
            android:rotation="-40"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.822"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blaizers_user_card_2"
            android:layout_width="38dp"
            android:layout_height="55dp"
            android:rotation="-20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.793"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blaizers_user_card_3"
            android:layout_width="38dp"
            android:layout_height="55dp"
            android:rotation="-10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.793"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blaizers_user_card_4"
            android:layout_width="38dp"
            android:layout_height="55dp"
            android:rotation="-5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.546"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.793"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blaizers_user_card_5"
            android:layout_width="38dp"
            android:layout_height="55dp"
            android:rotation="-3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.767"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blaizers_user_card_6"
            android:layout_width="38dp"
            android:layout_height="55dp"
            android:rotation="-20"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.609"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.744"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blaizers_dealer_card_2"
            android:layout_width="38dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.42"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blaizers_dealer_card_1"
            android:layout_width="38dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.453"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blaizers_dealer_card_3"
            android:layout_width="38dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blaizers_dealer_card_4"
            android:layout_width="38dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blaizers_dealer_card_5"
            android:layout_width="38dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.546"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/blaizers_dealer_card_6"
            android:layout_width="38dp"
            android:layout_height="55dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.579"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/blaizers_user_points"
            style="@style/blaizers_text_style"
            android:layout_width="104dp"
            android:layout_height="27dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@{blaizersGameViewModel.blaizersUserPoints.toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.951" />

        <TextView
            android:id="@+id/blaizers_dealer_points"
            style="@style/blaizers_text_style"
            android:layout_width="104dp"
            android:layout_height="27dp"
            android:gravity="center"
            android:visibility="gone"
            android:text="@{blaizersGameViewModel.blaizersDealerPoints.toString()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.012" />

        <LinearLayout
            android:id="@+id/blaizers_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <Button
                android:id="@+id/blaizers_hit"
                style="@style/blaizers_button_style"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:onClick="@{() -> blaizersGameViewModel.hitUserBlaizersCard()}"
                android:layout_marginBottom="8dp"
                android:text="@string/blaizers_hit" />

            <Button
                android:id="@+id/blaizers_stand"
                style="@style/blaizers_button_style"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{() -> blaizersGameViewModel.blaizersStand()}"
                android:text="@string/blaizers_stand" />

            <Button
                android:id="@+id/blaizers_double"
                style="@style/blaizers_button_style"
                android:visibility="@{blaizersGameViewModel.doubleButtonVisibility}"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginBottom="8dp"
                android:onClick="@{() -> blaizersGameViewModel.blaizersDouble()}"
                android:text="@string/blaizers_double" />

            <Button
                android:id="@+id/blaizers_surrender"
                style="@style/blaizers_button_style"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:onClick="@{() -> blaizersGameViewModel.blaizersSurrender()}"
                android:text="@string/blaizers_surrender" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />

        <androidx.viewpager.widget.ViewPager
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>